Introduce ``IFileNode`` interface. Set ``_changed`` to ``False`` after saving the file to disk in ``FileNode``. Reduce ``IFile`` interface. It no longer inherits from ``ILeaf`` and default file implementation related attributes were moved to ``IFileNode`` interface. This way it is possible to implement very custom file implementations without breaking the interface contract. Rename ``FileStorage`` to ``FileNode``. It no longer inherits from ``DictStorage``. ``FileNode`` and ``DirectoryStorage`` not inherits from ``_FSModeMixin`` respective now ``FSMode`` behavior any more. ``FSMode`` behavior must be applied explicit on nodes which should provide this behavior.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,6 +34,7 @@ jobs:
         run: |
           pip install wheel
           pip install coverage
+          pip install https://github.com/conestack/node/archive/master.zip
           pip install -e .[test]
 
       - name: Run tests
