--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,7 +1,6 @@
-name: Test node.ext.fs
+name: Tests
 
-on:
-  push:
+on: [push]
 
 jobs:
   test:
@@ -13,27 +12,28 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
+          - windows-latest
           - macos-latest
 
         python:
-          - "2.7"
           - "3.7"
           - "3.8"
           - "3.9"
           - "3.10"
+          - "3.11"
+          - "3.12"
+          - "pypy3.9"
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
 
       - name: Install
         run: |
-          pip install wheel
-          pip install https://github.com/conestack/node/archive/master.zip
           pip install -e .[test]
 
       - name: Run tests
