--- a/mx.ini
+++ b/mx.ini
@@ -62,8 +62,9 @@ mxmake-source-path = src/plumber
 ###############################################################################
 
 [node]
+use = ${settings:checkout_packages}
 url = ${settings:cs}/node.git
 pushurl = ${settings:cs_push}/node.git
-branch = refactor-package-layout
+branch = ${settings:feature_branch}
 mxmake-test-path = src
 mxmake-source-path = src/node
